tratando de reajustar el codigo al nuevo sitio, probando login sin exito...

--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,9 @@
     </div>
     <nav>
       <a class="activo" href="index.html">Inicio</a>
-      <a href="productos.html">Productos</a>
-      <a href="accesorios.html">Accesorios</a>
-      <a href="contacto.html">Contactenos</a>
+      <a href="productos.html" style="display:none;">Productos</a>
+      <a href="accesorios.html" style="display:none;">Accesorios</a>
+      <a href="contacto.html" style="display:none;">Contactenos</a>
       <a href="login.html">Log In</a>
       <a href="listado.html" id="listado-link" style="display:none;">Listado</a>
       <a href="/logout" style="display:none;">Logout</a>
