tratando de hacer login y que funcione

--- a/public/login.html
+++ b/public/login.html
@@ -17,7 +17,7 @@
       <a href="index.html">
         <img src="./img/logo.png" alt="Logo de Solo Caps"></a>
 
-      <h1>Solo Caps</h1>
+      <h1>Economia del Hogar</h1>
     </div>
     <nav>
 		<a href="index.html">Inicio</a>
