haciendo modificaciones para que tome el token que vuelve del front

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -100,6 +100,6 @@
 			crossorigin="anonymous">
 		</script>
 		
-		<script src="js/listado.js"></script>
+		<script src="js/dashboard.js"></script>
 </body>
 </html>
