--- a/public/conceptos.html
+++ b/public/conceptos.html
@@ -19,43 +19,76 @@
         </div>
         <nav>
             <a href="index.html">Inicio</a>
-            <a class="activo" href="productos.html">Productos</a>
-            <a href="accesorios.html">Accesorios</a>
+            <a href="dashboard.html" id="listado-link">Dashboard</a>
+            <a href="gastos.html">Cargar Gastos</a>
+            <a href="rubros.html">Rubros</a>
+            <a class="activo"  href="conceptos.html">Conceptos</a>
             <a href="contacto.html">Contactenos</a>
+            <a href="login.html" style="display:none;">Log In</a>
+            
+            <a href="index.html">Logout</a>
         </nav>
     </header>
     <main>
-        <div id="slider">
-            <div id="carousel" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="./img/banner1.jpg" class="d-block w-100" alt="banner1">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <h2>Conceptos</h2>
+                    <div class="mb-3">
+                        <label for="nombreConcepto" class="form-label">Nombre del Concepto</label>
+                        <input type="text" class="form-control" id="nombreConcepto" name="nombreConcepto" required>
                     </div>
-                    <div class="carousel-item">
-                        <img src="./img/banner3.jpg" class="d-block w-100" alt="banner2">
+                    <div class="mb-3">
+                        <label for="rubroConcepto" class="form-label">Rubro</label>
+                        <select class="form-select" id="rubroConcepto" name="rubroConcepto" required>
+                            <!-- Opciones de rubro se cargarán aquí dinámicamente -->
+                        </select>
                     </div>
-                    <div class="carousel-item">
-                        <img src="./img/banner5.jpg" class="d-block w-100" alt="banner3">
+                    <div class="mb-3">
+                        <label for="tipoConcepto" class="form-label">Tipo de Movimiento</label>
+                        <select class="form-select" id="tipoConcepto" name="tipoConcepto" required>
+                            <option value="egreso">Egreso</option>
+                            <option value="ingreso">Ingreso</option>
+                        </select>
+                    </div>
+                    <div class="form-check mb-3">
+                        <input class="form-check-input" type="checkbox" id="requiereVencimientoConcepto" name="requiereVencimientoConcepto">
+                        <label class="form-check-label" for="requiereVencimientoConcepto">Requiere Fecha de Vencimiento</label>
+                    </div>
+                    <button id="agregarConcepto" class="btn btn-primary">Agregar Concepto</button>
+                    <!-- Formulario oculto para editar -->
+                    <div id="editarConceptoForm" style="display: none;" class="mt-3">
+                        <h3>Editar Concepto</h3>
+                        <div class="mb-3">
+                            <label for="editarNombreConcepto" class="form-label">Nombre</label>
+                            <input type="text" class="form-control" id="editarNombreConcepto" name="editarNombreConcepto">
+                        </div>
+                        <div class="mb-3">
+                            <label for="editarRubroConcepto" class="form-label">Rubro</label>
+                            <select class="form-select" id="editarRubroConcepto" name="editarRubroConcepto" required>
+                                <!-- Opciones de rubro se cargarán aquí dinámicamente -->
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="editarTipoConcepto" class="form-label">Tipo de Movimiento</label>
+                            <select class="form-select" id="editarTipoConcepto" name="editarTipoConcepto" required>
+                                <option value="egreso">Egreso</option>
+                                <option value="ingreso">Ingreso</option>
+                            </select>
+                        </div>
+                        <div class="form-check mb-3">
+                            <input class="form-check-input" type="checkbox" id="editarRequiereVencimientoConcepto" name="editarRequiereVencimientoConcepto">
+                            <label class="form-check-label" for="editarRequiereVencimientoConcepto">Requiere Fecha de Vencimiento</label>
+                        </div>
+                        <button id="guardarConcepto" class="btn btn-primary">Guardar Cambios</button>
+                        <button id="cancelarEditarConcepto" class="btn btn-secondary">Cancelar</button>
+                    </div>
+                    <div id="listaConceptos" class="mt-3">
+                        <!-- Aquí se mostrará la lista de conceptos -->
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
         </div>
-        <h2>Cápsulas</h2>
-        <section id="capsulas" class="tarjeta" data-tipo="capsulas">
-            <div class="productos-container"></div>
-        </section>
-        <h2>Café Especialidad</h2>
-        <section id="cafeEspecialidad" class="tarjeta" data-tipo="cafeEspecialidad">
-            <div class="productos-container"></div>
-        </section>
     </main>
     <footer>
         <div class="footer">
