--- a/public/rubros.html
+++ b/public/rubros.html
@@ -41,7 +41,7 @@
                 <h2>Rubros</h2>
                 <div class="mb-3">
                     <label for="nombreRubro" class="form-label">Nombre del Rubro</label>
-                    <input type="text" class="form-control" id="nombreRubro" name="nombreRubro">
+                    <input type="text" id="nombreRubro" placeholder="Ingrese el nombre del rubro">
                 </div>
                 <button id="agregarRubro" class="btn btn-primary">Agregar Rubro</button>
                 <!-- Formulario oculto para editar -->
