--- a/public/conceptos.html
+++ b/public/conceptos.html
@@ -30,65 +30,34 @@
         </nav>
     </header>
     <main>
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-8">
-                    <h2>Conceptos</h2>
+        <h2>Gestión de Conceptos</h2>
+      <!--carrusel boostrap inicio-->
+      <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="mb-3">
+                    <label for="nombreConcepto" class="form-label">Nombre del Concepto</label>
+                    <input type="text" id="nombreConcepto" placeholder="Ingrese el nombre del Concepto">
+                </div>
+                <button id="agregarConcepto" class="btn btn-primary">Agregar Concepto</button>
+                <!-- Formulario oculto para editar -->
+                <div id="editarConceptoForm" style="display: none;" class="mt-3">
+                    <h3>Editar Concepto</h3>
                     <div class="mb-3">
-                        <label for="nombreConcepto" class="form-label">Nombre del Concepto</label>
-                        <input type="text" class="form-control" id="nombreConcepto" name="nombreConcepto" required>
+                        <label for="editarNombreConcepto" class="form-label">Nombre</label>
+                        <input type="text" class="form-control" id="editarNombreConcepto" name="editarNombreConcepto">
                     </div>
-                    <div class="mb-3">
-                        <label for="rubroConcepto" class="form-label">Rubro</label>
-                        <select class="form-select" id="rubroConcepto" name="rubroConcepto" required>
-                            <!-- Opciones de rubro se cargarán aquí dinámicamente -->
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="tipoConcepto" class="form-label">Tipo de Movimiento</label>
-                        <select class="form-select" id="tipoConcepto" name="tipoConcepto" required>
-                            <option value="egreso">Egreso</option>
-                            <option value="ingreso">Ingreso</option>
-                        </select>
-                    </div>
-                    <div class="form-check mb-3">
-                        <input class="form-check-input" type="checkbox" id="requiereVencimientoConcepto" name="requiereVencimientoConcepto">
-                        <label class="form-check-label" for="requiereVencimientoConcepto">Requiere Fecha de Vencimiento</label>
-                    </div>
-                    <button id="agregarConcepto" class="btn btn-primary">Agregar Concepto</button>
-                    <!-- Formulario oculto para editar -->
-                    <div id="editarConceptoForm" style="display: none;" class="mt-3">
-                        <h3>Editar Concepto</h3>
-                        <div class="mb-3">
-                            <label for="editarNombreConcepto" class="form-label">Nombre</label>
-                            <input type="text" class="form-control" id="editarNombreConcepto" name="editarNombreConcepto">
-                        </div>
-                        <div class="mb-3">
-                            <label for="editarRubroConcepto" class="form-label">Rubro</label>
-                            <select class="form-select" id="editarRubroConcepto" name="editarRubroConcepto" required>
-                                <!-- Opciones de rubro se cargarán aquí dinámicamente -->
-                            </select>
-                        </div>
-                        <div class="mb-3">
-                            <label for="editarTipoConcepto" class="form-label">Tipo de Movimiento</label>
-                            <select class="form-select" id="editarTipoConcepto" name="editarTipoConcepto" required>
-                                <option value="egreso">Egreso</option>
-                                <option value="ingreso">Ingreso</option>
-                            </select>
-                        </div>
-                        <div class="form-check mb-3">
-                            <input class="form-check-input" type="checkbox" id="editarRequiereVencimientoConcepto" name="editarRequiereVencimientoConcepto">
-                            <label class="form-check-label" for="editarRequiereVencimientoConcepto">Requiere Fecha de Vencimiento</label>
-                        </div>
-                        <button id="guardarConcepto" class="btn btn-primary">Guardar Cambios</button>
-                        <button id="cancelarEditarConcepto" class="btn btn-secondary">Cancelar</button>
-                    </div>
-                    <div id="listaConceptos" class="mt-3">
-                        <!-- Aquí se mostrará la lista de conceptos -->
-                    </div>
+                    <button id="guardarConcepto" class="btn btn-primary">Guardar Cambios</button>
+                    <button id="cancelarEditarConcepto" class="btn btn-secondary">Cancelar</button>
+                </div>
+                <div id="listaConceptos" class="mt-3">
+                    <!-- Aquí se mostrará la lista de Conceptos -->
                 </div>
             </div>
         </div>
+    </div>
+
+      <!--fin de carrusel-->
     </main>
     <footer>
         <div class="footer">
@@ -101,6 +70,6 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="/js/productos.js"></script>
+    <script src="/js/conceptos.js"></script>
 </body>
 </html>
