--- a/public/rubros.html
+++ b/public/rubros.html
@@ -34,6 +34,7 @@
       <!-- <img class="carrito" src="./img/img-nuevas/carrito.png" alt="" /> -->
     </header>
     <main>
+      <h2>Gestión de Rubros</h2>
       <!--carrusel boostrap inicio-->
       <div class="container">
         <div class="row justify-content-center">
