ventana emergente de modificar

--- a/public/editar_gastos.html
+++ b/public/editar_gastos.html
@@ -39,7 +39,7 @@
       <div class="container">
         <section>
             <h3>Editar Gastos</h3>
-            <article id="concepto-agregar">
+            <article id="formularioEdicion">
                 <div class="row justify-content-center">
                 <div class="col-md-8">
                         <div class="mb-3">
@@ -82,6 +82,7 @@
 
 
                     <button id="modificarGasto" class="btn btn-primary">Modificar Gasto</button>
+                    <button id="cancelarGasto" class="btn btn-primary" type="button" onclick="window.close();">Cancelar</button>
 
                 </div>
             </div>
@@ -108,5 +109,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/gastos/gastos_editar.js"></script>
+    <script src="js/gastos/gastos.js"></script>
   </body>
 </html>
