--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -23,7 +23,7 @@
             <a href="gastos.html">Cargar Gastos</a>
             <a href="rubros.html">Rubros</a>
             <a href="conceptos.html">Conceptos</a>
-            <a href="listado_gastos.html">Listdo de Gastos</a>
+            <a href="listado_gastos.html">Listado de Gastos</a>
             <a href="login.html" style="display:none;">Log In</a>
             
             <a href="index.html">Logout</a>
