--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -30,50 +30,40 @@
         </nav>
     </header>
 	<main>
-        <div class="container">
-            <div class="dashboard">
-                <h2>Resumen de Ingresos y Egresos</h2>
+        <div class="dashboard">
+            <h2>Resumen de Ingresos y Egresos</h2>
 
-                <section>
-                    <div class="filtros">
-                        <label for="mes">Mes:</label>
-                        <select id="mes"></select>
-                        <label for="anio">Año:</label>
-                        <select id="anio"></select>
-                    </div>
-                </section>
-                <section class="tarjeta">
-                    <article>
-                        <div class="card" style="width: 18rem;">
-                            <div class="card-body saldo">
-                                <h3 class="titulo">Resumen</h3>
-                                <p class="cuerpo" id="totalResumen"></p>
-                            </div>
-                        </div>
-                        </article>
-                </section>
-        
-                <section class="tarjeta">
-                    <article>
-                        <div class="card" style="width: 18rem;">
-                            <div class="card-body ingresos">
-                                <h3 class="titulo">Ingresos</h3>
-                                <p class="cuerpo" id="totalIngresos"></p>
-                            </div>
-                        </div>
-                        </article>
-                        <article>
-                        <div class="card" style="width: 18rem;">
-                            <div class="card-body egresos">
-                                <h3 class="titulo">Egresos</h3>
-                                <p class="cuerpo" id="totalEgresos"></p>
-                            </div>
-                        </div>
-                        </article>
-                </section>
-            </div>
+            <section class="filtros">
+                <div>
+                    <label for="mes">Mes:</label>
+                    <select id="mes"></select>
+                    <label for="anio">Año:</label>
+                    <select id="anio"></select>
+                </div>
+            </section>
+            <section class="tarjeta">
+                <article class="card saldo">
+                    <header>
+                        <h3 class="titulo">Resumen</h3>
+                    </header>
+                    <p class="cuerpo" id="totalResumen"></p>
+                </article>
+
+                <article class="card ingresos">
+                    <header>
+                        <h3 class="titulo">Ingresos</h3>
+                    </header>
+                    <p class="cuerpo" id="totalIngresos"></p>
+                </article>
+
+                <article class="card egresos">
+                    <header>
+                        <h3 class="titulo">Egresos</h3>
+                    </header>
+                    <p class="cuerpo" id="totalEgresos"></p>
+                </article>
+            </section>
         </div>
-		    
 	</main>
     <footer>
         <div class="footer">
