modificacion de estilo dash

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -48,8 +48,8 @@
                     </header>
                     <p class="cuerpo" id="totalResumen"></p>
                 </article>
-
-                <article class="card ingresos">
+<div class="ingresos-egresos">
+    <article class="card ingresos">
                     <header>
                         <h3 class="titulo">Ingresos</h3>
                     </header>
@@ -62,6 +62,8 @@
                     </header>
                     <p class="cuerpo" id="totalEgresos"></p>
                 </article>
+</div>
+                
             </section>
         </div>
 	</main>
