ajustando listados y formularios

--- a/public/listado_gastos.html
+++ b/public/listado_gastos.html
@@ -30,19 +30,17 @@
         </nav>
     </header>
     <main>
-        <h2>Listado de Gastos</h2>
+        <h2>Pago de Gastos</h2>
 
-      <div class="listado">
         <section>
-            
-            <div id="listaGastos" >
-                    <!-- Aquí se mostrará la lista de Gastos -->
-            </div>            
-
-        </section>
-
-    </div>
+            <article class="listado">
+                <h3>Listado de Gastos</h3>
                 
+                <div id="listaGastos" >
+                        <!-- Aquí se mostrará la lista de Gastos -->
+                </div>  
+            </article>
+        </section>
     </main>
     <footer>
         <div class="footer">
