modificaciones en estilos formularios y comienzo de modificar conceptos y gastos

--- a/public/rubros.html
+++ b/public/rubros.html
@@ -34,7 +34,7 @@
             <section class="agregar">
                 <div class="orden">
                 <h3>Agregar Rubro</h3>
-                <article id="rubro-agregar">
+                <article class="formulario" id="rubro-agregar">
             
                         <form>
                             <div>
