--- a/public/rubros.html
+++ b/public/rubros.html
@@ -41,7 +41,7 @@
                                 <label for="nombreRubro">Nombre del Rubro</label>
                                 <input type="text" id="nombreRubro" placeholder="Ingrese el nombre del rubro">
                             </div>
-                            <input type="submit" value="Agregar Rubro" id="agregarRubro">
+                            <input type="button" value="Agregar Rubro" id="agregarRubro">
                         </form>
                    
                 </article>
