--- a/public/conceptos.html
+++ b/public/conceptos.html
@@ -66,7 +66,7 @@
                             </select>
                         </div>
 
-                        <input type="submit" value="Agregar Concepto" id="agregarConcepto">
+                        <input type="button" value="Agregar Concepto" id="agregarConcepto">
 
                 </form>
 </article>
