--- a/public/gastos.html
+++ b/public/gastos.html
@@ -83,7 +83,7 @@
                         </div>
 
                         <div>
-                          <input type="submit" value="Agregar Gasto" id="agregarGasto">
+                          <input type="button" value="Agregar Gasto" id="agregarGasto">
                         </div>
                     
 
